# mwvm

./: .gitignore  CONTRIBUTE.md  Cargo.toml  QUICKSTART.md  README.md
crates/mwvm-cli/: Cargo.toml  main.rs
crates/mwvm-cli/commands/: gateway.rs  mod.rs  run.rs  swarm.rs  test.rs
crates/mwvm-core/: Cargo.toml
crates/mwvm-core/src/: batcher.rs  engine.rs  error.rs  lib.rs  linker.rs  memory.rs  prelude.rs  simulation.rs
crates/mwvm-core/src/host/: actor_messaging.rs  infer.rs  mod.rs  store_context.rs  vector_search.rs  zkml_tee.rs
crates/mwvm-cosmwasm/: Cargo.toml
crates/mwvm-cosmwasm/src/: bindings.rs  lib.rs  mock_env.rs  testing.rs
crates/mwvm-evm/: Cargo.toml
crates/mwvm-evm/src/: bindings.rs  lib.rs  mock_env.rs  testing.rs
crates/mwvm-gateway/: Cargo.toml
crates/mwvm-gateway/src/: a2a_server.rs  did_resolver.rs  gateway.rs  lib.rs  mcp_server.rs  x402_handler.rs
crates/mwvm-orchestrator/: Cargo.toml
crates/mwvm-orchestrator/src/: lib.rs  message_bus.rs  swarm.rs
crates/mwvm-sdk/: Cargo.toml
crates/mwvm-sdk/src/: agent.rs  config.rs  lib.rs  runtime.rs
crates/mwvm-svm/: Cargo.toml
crates/mwvm-svm/src/: bindings.rs  lib.rs  mock_env.rs  testing.rs
crates/mwvm-tests/: Cargo.toml
crates/mwvm-tests/fixtures/: README.md  generate-fixtures.sh  minimal_agent.wat
crates/mwvm-tests/tests/: gateway_e2e.rs  integration.rs  parity.rs
crates/mwvm-wasm/: Cargo.toml  README.md  package.json  tsconfig.json
crates/mwvm-wasm/src/: index.ts  lib.rs  mwvm_wasm.d.ts
docs/: README.md
docs/a2a/: README.md  a2a-bucket-templates.md  a2a-wasm-templates.md
docs/api/clamm/: hooks_documentation.md  hyper-clamm.md  hyper_clamm_system_design.md  operationtype-design.md  phase2-todos.md  pool_features.md  raw_src_balance_v3.md  reclamm-features.md  spot-engine.md
docs/api/clob/: clob-system-design.md  order-types.md  order-validation-optimal-design.md  orderbook-design-pattern.md  prediction-additional.md  prediction-mip133.md  prediction-mip134.md  submission-order-design.md  zero.md
docs/api/clob/archive/: market-non-atomic-and-race.md  market-query-gap.md  market-shard-gap.md  market-shard-minor-gap.md  market-vrf-gap.md
docs/api/hyperlane/: custom-ism-design-and-specification-diff.md  custom-ism-design-and-specification.md  hyperlane-flowcharts-and-diagrams-diff.md  hyperlane-flowcharts-and-diagrams.md  hyperlane-integration-architecture-overview-diff.md  hyperlane-integration-architecture-overview.md  ism-btc.md  ism-solana.md  token-bridging-and-crediting-implementation-guide-diff.md  token-bridging-and-crediting-implementation-guide.md  token-contract-address-verification-sub-step.md
docs/api/hyperlane/core-research/: hyperlane-avs.md  hyperlane-customized-ism.md  hyperlane-research.md
docs/bucket-as-service/: README.md  depth-limiter.md  economic-view.md  gov-params.md  index-fund-incentive.md  index-fund-requirements.md  recursive-risk-control.md  skin-in-game-leverage.md  veMORM.md
docs/build-strategies/: README.md
docs/cost/: cost-driver.md  cost.md  wasm-20yrs.md
docs/design/: draft3.md  draft5.md  draft6-v2.1.md  sdk-opensource.md  storage.md  sync-clock.md  vm-2.md
docs/government/: README.md
docs/government/AIMIA-level 5/: 2026-level.md  agent-body-law.md  cai-arch.md  cai-framework.md  ethos-arch.md  ethos-framework.md  government-comparison.md  hybrid-soiety.md
docs/government/AIMIA-level 5/ANIMA-V1/: ANIMA.md  ancestral-rituals.md  p4.md  p5.md  p6.md  p8.md  p9.md
docs/government/AIMIA-level 5/ANIMA-V2/: ANIMA-v2.md
docs/government/AIMIA-level5/: level-5-society.md
docs/government/AIMIA-level5/ANIMA-V1/: ANIMA.md  p1.md  p3.md
docs/government/pretext/: prelogue.md
docs/govnerment/: MORP-GOV-001.md  README.md
docs/mwvm-system-design/: 00-mwvm-business-scope.md  01-overview.md  02-architecture.md  03-bucket-as-service.md  04-governance.md  05-recursive-risk.md  06-cost-deployment.md  07-plugin-vm-extensibility.md  08-securities-testing.md  09-module-structure.md  10-scope-boundary.md  11-mwvm-vs-mormcore-vm.md  12-native-agent-core.md  13-mwvm-architecture-flow.md  14-mwvm-implementation-plan.md  README.md
docs/oracle/: bittensor-tao.md
docs/plugin-vm/: skills.md  types-of-patterns.md
docs/proposals/: README.md  api-appendix.md  draft10-v2.5.md  draft4-v1.0.md  draft7-v2.2.md  draft9-v2.4.md  io.md  keyhost.md  module.md  no-upgrades-like-evm.md  sdk-opensource.md  security-concern-agents.md  stress-test.md  v2.4-clarifications.md
docs/research/a2a/: README.md  a2a-wasm-templates.md  against-virtual.md  critical-features.md  fetchai.md
docs/research/bucket-as-a-service/: bucket-as-insurance.md  business-model.md  design.md  index-fund-product.md  security-concern.md
docs/research/cost/: stream-cost.md
docs/research/government/: BA-OVERLAP-PENALTY-001.md  MORP-GOV-2026-02.md  MORP-GOV-2026-03.md  design.md  hypbrid-governance.md  power_access.md
docs/research/government/AIMIA-level4/: governance.md
docs/research/government/AIMIA-level5/ANIMA-V1/: p2.md  p7.md
docs/research/mev/: mev.md
docs/research/nft/: bucket-integration.md  ext-bucket-nft.md
docs/research/plugin-vm/: savings.md  skills.md
docs/research/proposals/: README.md  api-appendix.md  archeciture.md  draft11-v2.6.md  draft8-v2.3.md  keyhost.md  storage.md
docs/securities/: README.md  overlap-features.md  review-2.4-2.md  vm-security-review.md
docs/test-framework/: example-deploy.md  mcp-feature.md
docs/vm/design/: comparison.md  draft1.md  draft2.md  morm-test.md  test-framework.md  test-mcp.md  test-mcp2.md
examples/: README.md
examples/basic-agent/: Cargo.toml  README.md
examples/basic-agent/src/: main.rs
examples/swarm-example/: Cargo.toml  README.md
examples/swarm-example/src/: main.rs
examples/web-browser-example/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/web-browser-example/src/: App.tsx
scripts/: verify-core.sh  verify-parity.sh
