[workspace]
resolver = "2"
members = [
    "crates/mwvm-core",
    "crates/mwvm-sdk",
    "crates/mwvm-orchestrator",
    "crates/mwvm-gateway",
    "crates/mwvm-cli",
    "crates/mwvm-wasm",
    "crates/mwvm-tests",
    "examples/basic-agent",
    "examples/swarm-example",
]
default-members = ["crates/mwvm-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Morpheum Team <team@morpheum.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/morpheum/mwvm"
homepage = "https://morpheum.xyz"
documentation = "https://docs.morpheum.xyz/mwvm"
description = "MWVM — Morpheum WASM Virtual Machine. Portable off-chain runtime, SDK, orchestrator, gateway, and WebAssembly bindings for high-performance AI agents."

[workspace.dependencies]
# ── Shared Domain Layer (Single Source of Truth) ──
morpheum-primitives = { path = "../morpheum-primitives", version = "0.1" }

# ── Internal MWVM Crates ──
mwvm-core = { path = "crates/mwvm-core" }
mwvm-sdk = { path = "crates/mwvm-sdk" }
mwvm-orchestrator = { path = "crates/mwvm-orchestrator" }
mwvm-gateway = { path = "crates/mwvm-gateway" }
mwvm-wasm = { path = "crates/mwvm-wasm" }

# ── Core WASM Runtime ──
wasmtime = "28.0"

# ── Async & Concurrency ──
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
flume = "0.11"

# ── Zero-Copy & Serialization ──
bytemuck = { version = "1.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Hashing & Encoding ──
blake3 = "1.5"
hex = "0.4"

# ── Concurrency Primitives ──
dashmap = "6.1"

# ── Observability & Errors ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
anyhow = "1.0"

# ── Web / HTTP ──
axum = { version = "0.8", features = ["json"] }

# ── CLI ──
clap = { version = "4.5", features = ["derive"] }

# ── WASM Bindings ──
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"

# ── Dev/Test Dependencies ──
tempfile = "3"
rand = "0.8"
axum-test = "19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
