[package]
name = "mwvm-svm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SVM developer tooling for Morpheum — local program testing, system program bindings, and mock environment"

[dependencies]
morpheum-primitives = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
